feat: add vcs api / add config api
- fix for cid x -- cmd if called without arguments
- support tag-regex line in dockerfiles for better versioning
